test/modules/diten/test_use_chain_resolution2.good
test_use_chain_resolution2.chpl:2: error: symbol aaa is multiply defined
test_use_chain_resolution2.chpl:14: note: also defined here
